Kubernetes/notes/kubernetes/servicemesh/istio/000-namespace.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: app1
  labels:
    istio-injection: enabled
