Kubernetes/notes/kubernetes/servicemesh/istio/002-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysite-nginx-service
  labels:
    app: nginx
    service: nginx
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: nginx
