Kubernetes/notes/kubernetes/servicemesh/istio/004-canary.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-service
  # namespace: app1
spec:
  hosts:
  - "*"
  http:
  - match:
    - uri:
        exact: /test
      headers:
        cookie:
          regex: ^(.*?;)?(version=v2)(;.*)?$
    route:
    - destination:
        host: mysite-nginx-service
  - match:
    - uri:
        exact: /test
    route:
    - destination:
        host: mysite-nginx-service
        port:
          number: 80
